--- a/Wine Review/FCC_Tutorial_Wine_review.ipynb
+++ b/Wine Review/FCC_Tutorial_Wine_review.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMuXBsHrKzFow16iWy2DusK",
+      "authorship_tag": "ABX9TyOCqTPqYqI/L+BK1pzLTKaO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +50,7 @@
       "metadata": {
         "id": "znCw07ZQ0L5N"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -68,7 +68,7 @@
         "id": "ERUvJC0n056O",
         "outputId": "6e8e8e18-3db1-40d1-ce04-55cf76e94d25"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -398,7 +398,7 @@
         "id": "k40BFQd209aQ",
         "outputId": "4608a265-6cba-4382-9803-edbdbf708354"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -436,7 +436,7 @@
         "id": "cDX-5-LZ2R7W",
         "outputId": "3258441a-6bee-4d61-cf33-133be56fda62"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -466,7 +466,7 @@
         "id": "MHoHgpHv2k-m",
         "outputId": "22510b04-4a4c-44d3-e5cc-02fd2240eb98"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -795,7 +795,7 @@
         "id": "6GxGPFJj3PxG",
         "outputId": "7f7f6dd6-3d63-43e1-c2ff-b0af04ab96bd"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -823,7 +823,7 @@
         },
         "outputId": "afc7394a-cc77-4ca0-a015-eddd2af43785"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -855,7 +855,7 @@
       "metadata": {
         "id": "3Ds38xlp--6f"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -868,7 +868,7 @@
       "metadata": {
         "id": "80dOB0SWBkRS"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -890,7 +890,7 @@
       "metadata": {
         "id": "pWErUsUHCcVs"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -905,7 +905,7 @@
         "id": "a_r49IiUIOiN",
         "outputId": "619a8c08-409c-4ab9-fb54-3f85e871cabf"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -955,7 +955,7 @@
       "metadata": {
         "id": "uPrdGPY5IvYq"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -970,7 +970,7 @@
       "metadata": {
         "id": "_aOEGPx3Js05"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -986,7 +986,7 @@
         "id": "5wfwKnW0KDn-",
         "outputId": "da8e4ed4-30d5-4a3b-b342-a84016cbe8c0"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1019,7 +1019,7 @@
         "id": "qDgeirDIKgny",
         "outputId": "2fe18e72-eced-4160-fe04-052421168d02"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1052,7 +1052,7 @@
         "id": "7EoaU6mpKplG",
         "outputId": "c7ecb7f5-499c-4b92-ace9-11c16df82b4b"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1104,7 +1104,7 @@
         "id": "ibt3usGJK5c6",
         "outputId": "26043c6c-cbe0-4604-fce0-cbe2fe242c07"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1137,7 +1137,7 @@
         "id": "KFhGZ9wtNwLo",
         "outputId": "88a7d529-6d93-4772-bd2b-12e6ffd0c3d3"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1174,7 +1174,7 @@
         "id": "O_dZp96gN2bG",
         "outputId": "276157fc-7258-4a75-877b-1e3a40554121"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1196,10 +1196,246 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## LSTM\n",
+        "\n",
+        "We are not going to use the hub for this purpose as we want more control over the model\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "dGD7rUyqkhtc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# first we are going to create some encoder for the text\n",
+        "encoder = tf.keras.layers.TextVectorization(max_tokens=2500)\n",
+        "encoder.adapt(train_data.map(lambda text, label : text))"
+      ],
+      "metadata": {
+        "id": "RcjMwxBfZ4oz"
+      },
+      "execution_count": 82,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vocab = np.array(encoder.get_vocabulary())\n",
+        "vocab[:25]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "77tjcK-GlsFw",
+        "outputId": "1c5ab5c6-6217-4146-8197-9a80cda21447"
+      },
+      "execution_count": 83,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['', '[UNK]', 'and', 'the', 'a', 'of', 'with', 'this', 'is', 'wine',\n",
+              "       'flavors', 'in', 'it', 'to', 'its', 'on', 'fruit', 'aromas',\n",
+              "       'palate', 'that', 'finish', 'acidity', 'from', 'tannins', 'but'],\n",
+              "      dtype='<U17')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 83
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = tf.keras.Sequential([\n",
+        "    encoder,\n",
+        "    tf.keras.layers.Embedding(\n",
+        "        input_dim = len(encoder.get_vocabulary()),\n",
+        "        output_dim = 32,\n",
+        "        mask_zero = True\n",
+        "    ),\n",
+        "    tf.keras.layers.LSTM(32),\n",
+        "    tf.keras.layers.Dense(32, activation = 'relu'),\n",
+        "    tf.keras.layers.Dropout(.3),\n",
+        "    tf.keras.layers.Dense(1, activation = 'sigmoid')\n",
+        "])"
+      ],
+      "metadata": {
+        "id": "1j6aJqLmmARA"
+      },
+      "execution_count": 85,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.compile(\n",
+        "    optimizer = tf.keras.optimizers.Adam(learning_rate = 0.01),\n",
+        "    loss = tf.keras.losses.BinaryCrossentropy(),\n",
+        "    metrics = ['accuracy']\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "fJGxyb5angVd"
+      },
+      "execution_count": 86,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.evaluate(train_data)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YrbLODAlnqpx",
+        "outputId": "099472ff-1861-4936-99bd-781bc78be9fb"
+      },
+      "execution_count": 87,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "102/102 [==============================] - 15s 130ms/step - loss: 0.6936 - accuracy: 0.4320\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.6936301589012146, 0.4319746792316437]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 87
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.evaluate(val_data)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JcQXN817nvBK",
+        "outputId": "8d8247dc-e035-4ec5-a052-7a57b7367109"
+      },
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "13/13 [==============================] - 2s 119ms/step - loss: 0.6936 - accuracy: 0.4296\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.6936393976211548, 0.429637610912323]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 88
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "history = model.fit(train_data, epochs = 7, validation_data = val_data, batch_size = 512)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lEe-GQrOnyk_",
+        "outputId": "6a716e1f-01a4-4f26-e4ba-82e0e7d23f8b"
+      },
+      "execution_count": 91,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/7\n",
+            "102/102 [==============================] - 25s 244ms/step - loss: 0.2429 - accuracy: 0.8900 - val_loss: 0.3979 - val_accuracy: 0.8394\n",
+            "Epoch 2/7\n",
+            "102/102 [==============================] - 25s 243ms/step - loss: 0.2290 - accuracy: 0.8957 - val_loss: 0.4214 - val_accuracy: 0.8418\n",
+            "Epoch 3/7\n",
+            "102/102 [==============================] - 25s 244ms/step - loss: 0.2263 - accuracy: 0.8967 - val_loss: 0.4286 - val_accuracy: 0.8413\n",
+            "Epoch 4/7\n",
+            "102/102 [==============================] - 25s 248ms/step - loss: 0.2111 - accuracy: 0.9025 - val_loss: 0.4479 - val_accuracy: 0.8369\n",
+            "Epoch 5/7\n",
+            "102/102 [==============================] - 25s 243ms/step - loss: 0.2051 - accuracy: 0.9060 - val_loss: 0.4741 - val_accuracy: 0.8397\n",
+            "Epoch 6/7\n",
+            "102/102 [==============================] - 27s 260ms/step - loss: 0.1942 - accuracy: 0.9110 - val_loss: 0.4658 - val_accuracy: 0.8406\n",
+            "Epoch 7/7\n",
+            "102/102 [==============================] - 25s 246ms/step - loss: 0.1847 - accuracy: 0.9155 - val_loss: 0.4917 - val_accuracy: 0.8422\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We have pretty good accuracy and doesn't seem to overfit"
+      ],
+      "metadata": {
+        "id": "N1Wmt4Fcqce0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.evaluate(test_data)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "94FmP7j3oIkt",
+        "outputId": "9ed39ffe-03ef-4ddf-a1e3-c4f6260ab185"
+      },
+      "execution_count": 92,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "13/13 [==============================] - 2s 159ms/step - loss: 0.5309 - accuracy: 0.8324\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.5308740139007568, 0.8323588371276855]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 92
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "RcjMwxBfZ4oz"
+        "id": "SinDSnZpqoBM"
       },
       "execution_count": null,
       "outputs": []
