--- a/PyTorch/3_NN.ipynb
+++ b/PyTorch/3_NN.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNfyTZN38E8hLvqaBmz8CVl",
+      "authorship_tag": "ABX9TyN5X0UElTS2Bq+ZxEgnj29o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "R9Otu3G86Z44"
       },
@@ -68,7 +68,7 @@
       "metadata": {
         "id": "gt2X4qB77AT7"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -83,7 +83,7 @@
         "id": "_sX3ChRw7ayD",
         "outputId": "21956564-b4d6-42ee-f286-716529b645ea"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -132,7 +132,7 @@
         "id": "UHUEIutt8JOc",
         "outputId": "4ab2c661-0b40-4671-d0ab-7bacd0b2ea49"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -479,7 +479,7 @@
         "id": "i8u-Qlcm9S2j",
         "outputId": "d3d75313-265d-4593-b557-2aceb3a05f77"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -526,7 +526,7 @@
         "id": "b9RnskTT94RW",
         "outputId": "cc3de911-11c2-4eb8-8e5b-8d52fa0784e4"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -556,7 +556,7 @@
         "id": "cnGSOXxy_eX4",
         "outputId": "42a1e7c0-02ac-461e-df68-fc24ac0196e0"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -600,7 +600,7 @@
         "id": "x_hl0rMb_1El",
         "outputId": "a57875a6-ea12-440c-db63-9b28d692145a"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -637,7 +637,7 @@
         "id": "BIifDpN_AsRp",
         "outputId": "f46cf727-f3da-409a-cea4-89bdfaee63e4"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -664,7 +664,7 @@
       "metadata": {
         "id": "hvz_XsYfE9Om"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -683,7 +683,7 @@
       "metadata": {
         "id": "Mn4XqNoVDJN0"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -699,7 +699,7 @@
         "id": "m2txW4NOE6gS",
         "outputId": "a2929edb-1299-4296-caf0-c4cf7d4f6ea7"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -728,7 +728,7 @@
       "metadata": {
         "id": "8NgwT9rTFNz0"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -742,7 +742,7 @@
       "metadata": {
         "id": "OgG1lP2QHb4h"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -769,7 +769,7 @@
         "id": "-ymCDqAXIAik",
         "outputId": "d8101c07-9a39-427d-a207-467fe3e9eab6"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -803,7 +803,7 @@
         "id": "3RAwPfQJZGsR",
         "outputId": "c5a5250a-3e70-4653-dc54-0ab5d4e9a524"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -839,7 +839,7 @@
       "metadata": {
         "id": "9ae7l-UmaUy5"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -887,7 +887,7 @@
         "id": "xckPGecdaIfo",
         "outputId": "c279efb1-cd9f-4fdc-942f-7dbc13d45103"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -938,7 +938,7 @@
         "id": "I-xHCZyYelq5",
         "outputId": "1f85371b-5553-4ea3-d6df-e1776643a4cf"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -957,7 +957,7 @@
       "metadata": {
         "id": "FjzuvVNwv1nr"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -989,7 +989,7 @@
       "metadata": {
         "id": "8pi_0McpwYcN"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1005,7 +1005,7 @@
         "id": "3UFNrQC7zucH",
         "outputId": "bad214c1-9727-492b-bc46-c73716368db7"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1035,7 +1035,7 @@
         "id": "yalDqpzqz28P",
         "outputId": "b287679f-d1e8-41f4-d1a3-7b6fd12e91b5"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1111,7 +1111,7 @@
       "metadata": {
         "id": "VMk3IMqj0CQf"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1167,7 +1167,7 @@
         "id": "8GscfI3n0ZML",
         "outputId": "fa74ed08-6994-412c-a544-ee991e82ae0a"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1197,10 +1197,162 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Building A Non-Linear Model"
+      ],
+      "metadata": {
+        "id": "KhR8HjJH4e7O"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class CircleModelV3(nn.Module):\n",
+        "    def __init__(self):\n",
+        "        super().__init__()\n",
+        "        self.layer1 = nn.Linear(in_features = 2, out_features= 10)\n",
+        "        self.layer2 = nn.Linear(in_features = 10, out_features = 16)\n",
+        "        self.layer3 = nn.Linear(in_features = 16, out_features = 1)\n",
+        "        self.relu = nn.ReLU()\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        z = self.layer1(x)\n",
+        "        z = self.relu(z)\n",
+        "        z = self.layer2(z)\n",
+        "        z = self.relu(z)\n",
+        "        z = self.layer3(z)\n",
+        "\n",
+        "        return z;"
+      ],
+      "metadata": {
+        "id": "f0qTLhPO07cG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model2 = CircleModelV3().to(device)\n",
+        "model2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aLAi3v9m4_Za",
+        "outputId": "98f6aede-f947-41bd-ecab-60a96cbc4635"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "CircleModelV3(\n",
+              "  (layer1): Linear(in_features=2, out_features=10, bias=True)\n",
+              "  (layer2): Linear(in_features=10, out_features=16, bias=True)\n",
+              "  (layer3): Linear(in_features=16, out_features=1, bias=True)\n",
+              "  (relu): ReLU()\n",
+              ")"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "loss_fn = nn.BCEWithLogitsLoss()\n",
+        "optimizer = optim.SGD(params = model2.parameters(), lr = 0.1)"
+      ],
+      "metadata": {
+        "id": "fgkvl5FI5FMN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pt.manual_seed(42)\n",
+        "pt.cuda.manual_seed(42)\n",
+        "\n",
+        "x_train, y_train = x_train.to(device), y_train.to(device)\n",
+        "x_test, y_test = x_test.to(device), y_test.to(device)\n",
+        "\n",
+        "epochs = 1000\n",
+        "\n",
+        "for epoch in range(epochs):\n",
+        "    # Training\n",
+        "    model2.train()\n",
+        "\n",
+        "    # 1. Forward pass\n",
+        "    y_logits = model2(x_train).squeeze()\n",
+        "    y_pred = pt.round(pt.sigmoid(y_logits))\n",
+        "\n",
+        "    # 2. Calc Loss\n",
+        "    loss = loss_fn(y_logits, y_train)\n",
+        "    acc = acc_fn(y_train, y_pred)\n",
+        "\n",
+        "    # 3. Optimizer\n",
+        "    optimizer.zero_grad()\n",
+        "\n",
+        "    # 4. Loss Backward -> Back prop\n",
+        "    loss.backward()\n",
+        "\n",
+        "    # 5. Gradient Decent\n",
+        "    optimizer.step()\n",
+        "\n",
+        "    # Testing\n",
+        "    model2.eval()\n",
+        "    with pt.inference_mode():\n",
+        "        # 1. Forward Pass\n",
+        "        test_logits = model2(x_test).squeeze()\n",
+        "        test_pred = pt.round(pt.sigmoid(test_logits))\n",
+        "\n",
+        "        # 2. Clac Loss\n",
+        "        test_loss = loss_fn(test_logits, y_test)\n",
+        "        test_acc = acc_fn (test_pred, y_test)\n",
+        "\n",
+        "    if epoch %100 == 0:\n",
+        "        print(f\"epoch: {epoch} | Loss : {loss : .4f} , Acc: {acc: .2f}, test_loss : {test_loss: .4f}, test_acc : {test_acc: .2f}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3bUpVRWb5VLg",
+        "outputId": "16a78fc4-daf0-4a41-9241-2f3b87b21516"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "epoch: 0 | Loss :  0.6945 , Acc:  49.65, test_loss :  0.6930, test_acc :  51.40\n",
+            "epoch: 100 | Loss :  0.6887 , Acc:  53.91, test_loss :  0.6899, test_acc :  52.35\n",
+            "epoch: 200 | Loss :  0.6857 , Acc:  55.30, test_loss :  0.6871, test_acc :  53.80\n",
+            "epoch: 300 | Loss :  0.6812 , Acc:  56.46, test_loss :  0.6828, test_acc :  54.95\n",
+            "epoch: 400 | Loss :  0.6755 , Acc:  56.76, test_loss :  0.6773, test_acc :  55.85\n",
+            "epoch: 500 | Loss :  0.6673 , Acc:  57.73, test_loss :  0.6697, test_acc :  57.40\n",
+            "epoch: 600 | Loss :  0.6548 , Acc:  63.22, test_loss :  0.6576, test_acc :  63.10\n",
+            "epoch: 700 | Loss :  0.6341 , Acc:  73.40, test_loss :  0.6365, test_acc :  72.95\n",
+            "epoch: 800 | Loss :  0.5917 , Acc:  80.75, test_loss :  0.5930, test_acc :  80.40\n",
+            "epoch: 900 | Loss :  0.5153 , Acc:  91.72, test_loss :  0.5161, test_acc :  92.05\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "f0qTLhPO07cG"
+        "id": "hpwx49-K5kDG"
       },
       "execution_count": null,
       "outputs": []
